# b3_msh

./: .gitignore  LICENSE  README.md  admin.sh  design_brief.typ  pyproject.toml  pytest.ini
.github/workflows/: test.yml
examples/: blade_test.yml  example_usage.py  explicit_n_elements_example.py  multi_airfoil_example.py  process_blade.py  run_all_examples.py
examples/temp_blade/b3_geo/: lm1_mesh.vtp
src/afmesh/: __init__.py
src/afmesh/cli/: cli.py
src/afmesh/core/: airfoil.py  airfoil_core.py  airfoil_mesh.py  airfoil_viz.py  shear_web.py
src/afmesh/utils/: utils.py
src/b3_msh/: __init__.py  statesman_step.py
src/b3_msh/cli/: cli.py  commands.py
src/b3_msh/core/: airfoil.py  airfoil_core.py  airfoil_mesh.py  airfoil_viz.py  blade_processing.py  mesh_model.py  mesh_step.py  shear_web.py
src/b3_msh/statesman/: statesman_step.py
src/b3_msh/utils/: blade_processing.py  logger.py  utils.py
tests/: test_airfoil.py  test_blade_processing.py  test_examples.py  test_shear_web.py  test_statesman.py
