[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afmesh"
version = "0.1.0"
description = "A Python library for handling line meshes representing airfoils with internal structure."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pyvista",
    "matplotlib",
    "pytest",
    "pytest-cov",
]

[project.scripts]
afmesh = "afmesh.cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/afmesh"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = []

[tool.pytest.ini_options]
addopts = "--cov=afmesh --cov-report=html"
testpaths = ["tests"]