[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3_msh"
version = "0.1.0"
description = "A Python library for handling line meshes representing airfoils with internal structure."
authors = [{name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pyvista",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "treeparse",
    "pydantic",
    "statesman @ git+https://github.com/wr1/statesman.git",
    "pyyaml",
    "rich",
]

[project.scripts]
b3_msh = "b3_msh.cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/b3_msh"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = []

# [pytest.ini_options]
# addopts = "--cov=b3_msh "
# testpaths = ["tests"]
# pythonpath = ["src"]